refactor and flyway